--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  timeline_list: ^0.0.6
+
   flutter_svg: ^1.1.0
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
